--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,118 +13,156 @@
             text-decoration: none;
         }
     </style>
-
 </head>
+
 <body style="background-color: #DFE6DA;">
-    <ul class="nav nav-tabs border-0 d-flex justify-content-center p-3" style="background-color: #9CAF88;">
-        <li class="nav-item">
-            <a class="nav-link active border-0 bg-transparent 
-            " aria-current="page" href="#">HOME</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link border-0" href="#" style="color: white;">ABOUT</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link border-0" href="#" style="color: white;">CONTACT</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link border-0" href="#" style="color: white; font-weight: bold;">SUBSCRIBE</a>
-        </li>
-    </ul>
+    <div class="container">
+        <ul class="nav nav-tabs border-0 d-flex justify-content-center p-3" style="background-color: #9CAF88;">
+            <li class="nav-item">
+                <a class="nav-link active border-0 bg-transparent" aria-current="page" href="#">HOME</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link border-0" href="#" style="color: white;">ABOUT</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link border-0" href="#" style="color: white;">CONTACT</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link border-0" href="#" style="color: white; font-weight: bold;">SUBSCRIBE</a>
+            </li>
+        </ul>
 
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active" style="height: 45vw;">
-                <img src="https://plus.unsplash.com/premium_photo-1663840135694-89cef06e3803?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100 h-100" alt="">
-                <div class="carousel-caption d-none d-md-block" style="background-color:black;">
-                    <h1 style="color: #758467;">WELCOME TO THE LIFESTYLE HUB</h1>
-                    <p style="margin: 1vw;">Explore trends, wellness, and living your best life</p>
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" style="height: 45vw;">
+                    <img src="https://plus.unsplash.com/premium_photo-1663840135694-89cef06e3803?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        class="d-block w-100 h-100" alt="">
+                    <div class="carousel-caption d-none d-md-block" style="background-color:black;">
+                        <h1 style="color: #758467;">WELCOME TO THE LIFESTYLE HUB</h1>
+                        <p style="margin: 1vw;">Explore trends, wellness, and living your best life</p>
+                    </div>
+                </div>
+                <div class="carousel-item" style="height: 45vw;">
+                    <img src="https://images.unsplash.com/photo-1526566762798-8fac9c07aa98?q=80&w=2904&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        class="d-block w-100" alt="">
+                    <div class="carousel-caption d-none d-md-block" style="background-color:black;">
+                        <h1 style="color: #758467;">WELCOME TO THE LIFESTYLE HUB</h1>
+                        <p style="margin: 1vw;">Lifestyle is all about finding balance, embracing health, and living in
+                            the moment. Whether you're into fitness,
+                            mindfulness, or just looking to elevate your daily routines, you've come to the right place.
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="carousel-item" style="height: 45vw;">
-                <img src="https://images.unsplash.com/photo-1526566762798-8fac9c07aa98?q=80&w=2904&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="">
-                <div class="carousel-caption d-none d-md-block" style="background-color:black;">
-                    <h1 style="color: #758467;">WELCOME TO THE LIFESTYLE HUB</h1>
-                    <p style="margin: 1vw;">Lifestyle is all about finding balance, embracing health, and living in the moment. Whether you're into fitness,
-                        mindfulness, or just looking to elevate your daily routines, you've come to the right place.</p>
-                </div>
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon h-25 w-25" style="background-color: #758467;"
+                    aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon h-25 w-25" style="background-color: #758467;"
+                    aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon h-25 w-25" style="background-color: #758467;" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <span class="carousel-control-next-icon h-25 w-25" style="background-color: #758467;" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
 
-    <div class="d-flex justify-content-evenly p-5">
-        <div class="card" style="width: 18rem; background-color: #CBD5C0;">
-            <div class="card-body">
-                <h3 class="card-title" style="color: #5C6249;">LATEST</h3>
-                <p class="card-text">Discover the latest trends in wellness, from meditation techniques to fitness tips that keep you grounded and healthy.</p>
-            </div>
-            <ul class="list-group list-group-flush" style="background-color: #758467";>
-                <a href=""><li class="list-group-item" style="border-color: transparent; background-color: transparent;"><h5 style="color: silver;">Healthy Life Starts from You!</h5></li></a>
-                <a href="">
-                    <li class="list-group-item" style="border-color: transparent; background-color: transparent;"><h5 style="color: silver;">Are you Busy? This Exercises will Help You</h5></li>
-                </a>
-                <a href="">
-                    <li class="list-group-item" style="border-color: transparent; background-color: transparent;"><h5 style="color: silver;">Avoid Junkfood for a Better Life</h5></li>
-                </a>
-                <a href="">
-                    <li class="list-group-item" style="border-color: transparent; background-color:transparent;">
-                        <P style="color: #CBD5C0; font-style: italic; display: block; float: right;">View More</P>
-                    </li>
-                </a>
-            </ul>
-        </div>
-        <div class="card" style="width: 18rem; background-color: #CBD5C0;">
-            <div class="card-body">
-                <h3 class="card-title" style="color: #5C6249;">EXPLORE</h3>
-                <p class="card-text">Stay ahead in fashion with insights into what's trending, sustainable fashion tips, and more.</p>
-            </div>
-            <ul class="list-group list-group-flush" style="background-color: #758467" ;>
-                <a href="">
-                    <li class="list-group-item" style="border-color: transparent; background-color: transparent;">
-                        <h5 style="color: silver;">How to be Productive?</h5>
-                    </li>
-                </a>
-                <a href="">
-                    <li class="list-group-item" style="border-color: transparent; background-color: transparent;">
-                        <h5 style="color: silver;">Slim in 30 Days</h5>
-                    </li>
-                </a>
-                <a href="">
-                    <li class="list-group-item" style="border-color: transparent; background-color: transparent;">
-                        <h5 style="color: silver;">Study Effectively and Efficiently</h5>
-                    </li>
-                </a>
-                <a href="">
-                    <li class="list-group-item" style="border-color: transparent; background-color:transparent;">
-                        <P style="color: #CBD5C0; font-style: italic; display: block; float: right;">View More</P>
-                    </li>
-                </a>
-            </ul>
-            </div>
-        <div class="card">
-            <div class="card-body">
-                <h3 class="card-title">JOIN OUR COMMUNITY</h3>
-                <p class="card-text">Subscribe for the latest lifestyle updates. Special rewards are ready for you.</p>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">First Name:</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="e.g: Felix" style="font-style: italic;">
+        <div class="row justify-content-center p-5">
+            <div class="col-12 col-md-4 mb-4">
+                <div class="card" style="background-color: #CBD5C0;">
+                    <div class="card-body">
+                        <h3 class="card-title" style="color: #5C6249;">LATEST</h3>
+                        <p class="card-text">Discover the latest trends in wellness, from meditation techniques to
+                            fitness tips that keep you grounded and healthy.</p>
+                    </div>
+                    <ul class="list-group list-group-flush" style="background-color: #758467;">
+                        <a href="">
+                            <li class="list-group-item"
+                                style="border-color: transparent; background-color: transparent;">
+                                <h5 style="color: silver;">Healthy Life Starts from You!</h5>
+                            </li>
+                        </a>
+                        <a href="">
+                            <li class="list-group-item"
+                                style="border-color: transparent; background-color: transparent;">
+                                <h5 style="color: silver;">Are you Busy? This Exercises will Help You</h5>
+                            </li>
+                        </a>
+                        <a href="">
+                            <li class="list-group-item"
+                                style="border-color: transparent; background-color: transparent;">
+                                <h5 style="color: silver;">Avoid Junkfood for a Better Life</h5>
+                            </li>
+                        </a>
+                        <a href="">
+                            <li class="list-group-item"
+                                style="border-color: transparent; background-color: transparent;">
+                                <P style="color: #CBD5C0; font-style: italic; display: block; float: right;">View More
+                                </P>
+                            </li>
+                        </a>
+                    </ul>
                 </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Email:</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com"
-                        style="font-style: italic;">
+            </div>
+            <div class="col-12 col-md-4 mb-4">
+                <div class="card" style="background-color: #CBD5C0;">
+                    <div class="card-body">
+                        <h3 class="card-title" style="color: #5C6249;">EXPLORE</h3>
+                        <p class="card-text">Stay ahead in fashion with insights into what's trending, sustainable
+                            fashion tips, and more.</p>
+                    </div>
+                    <ul class="list-group list-group-flush" style="background-color: #758467;">
+                        <a href="">
+                            <li class="list-group-item"
+                                style="border-color: transparent; background-color: transparent;">
+                                <h5 style="color: silver;">How to be Productive?</h5>
+                            </li>
+                        </a>
+                        <a href="">
+                            <li class="list-group-item"
+                                style="border-color: transparent; background-color: transparent;">
+                                <h5 style="color: silver;">Slim in 30 Days</h5>
+                            </li>
+                        </a>
+                        <a href="">
+                            <li class="list-group-item"
+                                style="border-color: transparent; background-color: transparent;">
+                                <h5 style="color: silver;">Study Effectively and Efficiently</h5>
+                            </li>
+                        </a>
+                        <a href="">
+                            <li class="list-group-item"
+                                style="border-color: transparent; background-color:transparent;">
+                                <P style="color: #CBD5C0; font-style: italic; display: block; float: right;">View More
+                                </P>
+                            </li>
+                        </a>
+                    </ul>
                 </div>
-                <a href="#" class="btn" style="background-color: #5C6249; color: white;">Subscribe</a>
+            </div>
+            <div class="col-12 col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">JOIN OUR COMMUNITY</h3>
+                        <p class="card-text">Subscribe for the latest lifestyle updates. Special rewards are ready for
+                            you.</p>
+                        <div class="mb-3">
+                            <label for="firstName" class="form-label">First Name:</label>
+                            <input type="text" class="form-control" id="firstName" placeholder="e.g: Felix"
+                                style="font-style: italic;">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email:</label>
+                            <input type="email" class="form-control" id="email" placeholder="name@example.com"
+                                style="font-style: italic;">
+                        </div>
+                        <a href="#" class="btn" style="background-color: #5C6249; color: white;">Subscribe</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
