--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <div class="d-flex justify-content-center p-1">
                         <a class="tos" href="">Term of Service</a>
                         <p class="lane">|</p>
-                        <a class="tos" href="">Contact Us</a>
+                        <a class="tos" href="" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop1" aria-controls="offcanvasTop1">Contact Us</a>
                     </div>
                     <style>
                         .tos, .lane {
